test/corpus/core.txt
================================================================================
HTML tags and placeholders
================================================================================

<main class="home">
  <h1>${title}</h1>
</main>

--------------------------------------------------------------------------------

(document
  (element
    (normal_element
      (start_tag
        (tag_name)
        (attribute
          (regular_attribute
            (attribute_name)
            (quoted_attribute_value))))
      (element
        (normal_element
          (start_tag
            (tag_name))
          (placeholder
            (javascript_fragment))
          (end_tag
            (tag_name))))
      (end_tag
        (tag_name)))))

================================================================================
Top-level statements and scriptlet
================================================================================

import type { Input } from "pkg";
$ const value = 1;

--------------------------------------------------------------------------------

(document
  (top_level_statement
    (statement_tail))
  (scriptlet))

================================================================================
Marko flow and function tag names
================================================================================

<if=ready>
  <const/>
</if>

--------------------------------------------------------------------------------

(document
  (element
    (normal_element
      (start_tag
        (flow_tag_name)
        (tag_default_value
          (tag_default_fragment)))
      (element
        (self_closing_element
          (function_tag_name)))
      (end_tag
        (flow_tag_name)))))

================================================================================
Tag pre-attribute syntax and special attributes
================================================================================

<for.item#row/list|item,index| (item) { item.id } on-click(ev){ emit(ev) } key=rowKey no-update-if=isHydrating>
  <div/>
</for>

--------------------------------------------------------------------------------

(document
  (element
    (normal_element
      (start_tag
        (flow_tag_name)
        (shorthand_attribute)
        (shorthand_attribute)
        (tag_variable
          (tag_variable_fragment))
        (tag_parameters
          (tag_parameters_fragment))
        (tag_arguments
          (tag_arguments_fragment))
        (tag_method
          (tag_method_fragment))
        (attribute
          (regular_attribute
            (special_attribute_name)
            (attribute_arguments
              (attribute_arguments_fragment))
            (attribute_method
              (attribute_method_fragment))))
        (attribute
          (regular_attribute
            (special_attribute_name)
            (attribute_value_fragment)))
        (attribute
          (regular_attribute
            (special_attribute_name)
            (attribute_value_fragment))))
      (element
        (self_closing_element
          (tag_name)))
      (end_tag
        (flow_tag_name)))))
