test/corpus/css_fixtures.txt
================================================================================
Fixture css-calc (htmljs target)
================================================================================

﻿style {
    .example {
        margin-left: calc((-100% / 12 - 200px) / 2);
    }
}

--------------------------------------------------------------------------------

(document
  (style_block_css
    (style_block_content))
  (text))

================================================================================
Fixture css-grid (htmljs target)
================================================================================

﻿style.scss {
  .foo {
    grid: "left right" / 3fr 7fr;
  }
}

--------------------------------------------------------------------------------

(document
  (style_block_scss
    (style_block_content))
  (text))
