test/corpus/default_fixtures.txt
================================================================================
Fixture default-attr (htmljs target)
================================================================================

<a = test b = 2/>

--------------------------------------------------------------------------------

(document
  (element
    (self_closing_element
      (tag_name))))

================================================================================
Fixture default-attr-comma (htmljs target)
================================================================================

<a=test,b=2/>

--------------------------------------------------------------------------------

(document
  (element
    (self_closing_element
      (tag_name)
      (tag_default_value
        (tag_default_fragment)))))

================================================================================
Fixture default-attr-no-space (htmljs target)
================================================================================

<a=test b=2/>
<if=(a && b)>
</if>

--------------------------------------------------------------------------------

(document
  (element
    (self_closing_element
      (tag_name)
      (tag_default_value
        (tag_default_fragment))
      (attribute
        (regular_attribute
          (attribute_name)
          (attribute_value_fragment)))))
  (element
    (normal_element
      (start_tag
        (flow_tag_name)
        (tag_default_value
          (attribute_paren_value
            (attribute_paren_fragment))))
      (end_tag
        (flow_tag_name)))))
