test/corpus/double_hyphen_fixtures.txt
================================================================================
Double hyphen line in script concise text (htmljs target)
================================================================================

<!DOCTYPE html>
html [lang="en"]
  body
    h1 -- Title
    script -- var a = 'marko';

--------------------------------------------------------------------------------

(document
  (doctype)
  (concise_tag
    (tag_name)
    (concise_attribute_group
      (attribute
        (regular_attribute
          (attribute_name)
          (quoted_attribute_value)))))
  (concise_tag
    (tag_name))
  (concise_tag
    (tag_name))
  (concise_fence_line)
  (ERROR)
  (concise_fence_line))

================================================================================
Double hyphen block under script concise tag (htmljs target)
================================================================================

<!DOCTYPE html>
html [lang="en"]
  body
    h1 -- Title
    script
      ---
      var a = 'marko';
      ---

--------------------------------------------------------------------------------

(document
  (doctype)
  (concise_tag
    (tag_name)
    (concise_attribute_group
      (attribute
        (regular_attribute
          (attribute_name)
          (quoted_attribute_value)))))
  (concise_tag
    (tag_name))
  (concise_tag
    (tag_name))
  (concise_fence_line)
  (ERROR)
  (concise_fence_block
    (text)))

================================================================================
Double hyphen line under script concise tag (htmljs target)
================================================================================

<!DOCTYPE html>
html [lang="en"]
  body
    h1 -- Title
    script
      -- var a = 'marko';

--------------------------------------------------------------------------------

(document
  (doctype)
  (concise_tag
    (tag_name)
    (concise_attribute_group
      (attribute
        (regular_attribute
          (attribute_name)
          (quoted_attribute_value)))))
  (concise_tag
    (tag_name))
  (concise_tag
    (tag_name))
  (concise_fence_line)
  (ERROR)
  (concise_fence_line))
