test/corpus/eof_fixtures.txt
================================================================================
Fixture eof-attr-argument (htmljs target)
================================================================================

<div if(a==b

--------------------------------------------------------------------------------

(document
  (ERROR
    (tag_name)
    (attribute_name)
    (attribute_arguments_fragment)))

================================================================================
Fixture eof-attr-value-js-comment-comment (htmljs target)
================================================================================

<a><b selected something test=/*

--------------------------------------------------------------------------------

(document
  (ERROR
    (start_tag
      (tag_name))
    (tag_name)
    (attribute
      (regular_attribute
        (attribute_name)))
    (attribute
      (regular_attribute
        (attribute_name)))
    (attribute_name)))

================================================================================
Fixture eof-attr-value-js-comment-comment-concise (htmljs target)
================================================================================

b selected something test=/*

--------------------------------------------------------------------------------

(document
  (concise_tag
    (tag_name))
  (ERROR
    (attribute_name)
    (attribute_name)
    (attribute_name)))

================================================================================
Fixture eof-attr-value-string (htmljs target)
================================================================================

<a href="

--------------------------------------------------------------------------------

(document
  (ERROR
    (tag_name)
    (attribute_name)))

================================================================================
Fixture eof-placeholder-body-escaped (htmljs target)
================================================================================

<div>Hello ${abc</div>

--------------------------------------------------------------------------------

(document
  (element
    (normal_element
      (start_tag
        (tag_name))
      (text)
      (placeholder
        (javascript_fragment))
      (end_tag
        (tag_name))))
  (MISSING "}"))

================================================================================
Fixture eof-placeholder-body-non-escaped (htmljs target)
================================================================================

<div>
    Hello
    $!{abc
</div>

--------------------------------------------------------------------------------

(document
  (element
    (normal_element
      (start_tag
        (tag_name))
      (text)
      (placeholder
        (javascript_fragment))
      (end_tag
        (tag_name))))
  (MISSING "}"))

================================================================================
Fixture eof-placeholder-concise (htmljs target)
================================================================================

div
    -- $!{abc

--------------------------------------------------------------------------------

(document
  (concise_tag
    (tag_name))
  (concise_fence_line)
  (MISSING "}"))

================================================================================
Fixture eof-placeholder-script-body-escaped (htmljs target)
================================================================================

<script>Hello ${abc

--------------------------------------------------------------------------------

(document
  (ERROR
    (start_tag
      (builtin_tag_name))
    (text)
    (javascript_fragment)))

================================================================================
Fixture eof-placeholder-script-body-non-escaped (htmljs target)
================================================================================

<script>Hello $!{abc

--------------------------------------------------------------------------------

(document
  (ERROR
    (start_tag
      (builtin_tag_name))
    (text)
    (javascript_fragment)))

================================================================================
Fixture eof-placeholder-string (htmljs target)
================================================================================

<div>Hello ${(x</div>

--------------------------------------------------------------------------------

(document
  (element
    (normal_element
      (start_tag
        (tag_name))
      (text)
      (placeholder
        (javascript_fragment))
      (end_tag
        (tag_name))))
  (MISSING "}"))

================================================================================
Fixture eof-script-body (htmljs target)
================================================================================

<script a=b>// line comment within <script>
/* block comment within <script> */"string within \"<script>\""'string within \'<script>\''

--------------------------------------------------------------------------------

(document
  (ERROR
    (start_tag
      (builtin_tag_name)
      (attribute
        (regular_attribute
          (attribute_name)
          (attribute_value_fragment))))
    (text)
    (start_tag
      (builtin_tag_name))
    (text)
    (start_tag
      (builtin_tag_name))
    (text)
    (start_tag
      (builtin_tag_name))
    (text)
    (start_tag
      (builtin_tag_name))
    (text)))

================================================================================
Fixture eof-style (htmljs target)
================================================================================

<style a=b>/* block comment within <style> */"string within \"<style>\""'string within \'<style>\''

--------------------------------------------------------------------------------

(document
  (ERROR
    (start_tag
      (builtin_tag_name)
      (attribute
        (regular_attribute
          (attribute_name)
          (attribute_value_fragment))))
    (text)
    (start_tag
      (builtin_tag_name))
    (text)
    (start_tag
      (builtin_tag_name))
    (text)
    (start_tag
      (builtin_tag_name))
    (text)))

================================================================================
Fixture eof-xml-declaration (htmljs target)
================================================================================

<?xml version="1.0"

--------------------------------------------------------------------------------

(document
  (declaration)
  (MISSING "?>"))
