test/corpus/eof_open_tag_fixtures.txt
================================================================================
EOF after tag start
================================================================================

<a><b

--------------------------------------------------------------------------------

(document
  (ERROR
    (start_tag
      (tag_name))
    (tag_name)))

================================================================================
EOF after attribute name
================================================================================

<a><b selected

--------------------------------------------------------------------------------

(document
  (ERROR
    (start_tag
      (tag_name))
    (tag_name)
    (attribute_name)))

================================================================================
EOF after unquoted attribute value
================================================================================

<a><b selected something test=123

--------------------------------------------------------------------------------

(document
  (ERROR
    (start_tag
      (tag_name))
    (tag_name)
    (attribute
      (regular_attribute
        (attribute_name)))
    (attribute
      (regular_attribute
        (attribute_name)))
    (attribute
      (regular_attribute
        (attribute_name)
        (attribute_value_fragment)))))
